<resources>
    <string name="app_name">I-A-T</string>
    <string name="click_here">click_here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="noAccount">Don\'t have an account ?</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="haveAccount">Have an account ?</string>
    <string name="img">app logo</string>
    <string name="sign_in_Link">Sign in</string>
    <string name="intro">Your journey to an insured future starts here</string>
    <string name="start">Get started now</string>
    <string name="app_image">logo</string>
    <string name="signin_text">Sign in</string>
    <string name="signup_text">Sign up</string>
    <string name="homeButton">Payments due</string>
    <string name="mapsButton">Search ambulance</string>
    <string name="profileButton">Profile</string>
    <string name="historyButton">History</string>
    <string name="motto">Here to serve you</string>
    <string name="payment_code">Payment code is 769845</string>
    <string name="payment_code_button">Generate payment</string>
    <string name="logout">Logout</string>
    <string name="payments_text">Payments due</string>
    <string name="month">January</string>
    <string name="price">300000 ugx</string>
    <string name="pay_now">Pay Now</string>
    <string name="profile">profile</string>
</resources>