<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/signin_text"
        android:textSize="30sp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/health"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:autofillHints="name"
        android:radius="50dp"
        android:paddingStart="20dp"
        android:background="@drawable/rounded_corners"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignStart="@id/editText"
        android:layout_below="@id/editText"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corners"
        android:autofillHints="password"
        android:paddingStart="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:onClick="goToHome"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_text"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
               />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_below="@id/editText2"
        android:gravity="center"
        android:text="@string/noAccount"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_below="@id/editText2"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:text="@string/signup_text"
        android:onClick="goToSignup"/>


</RelativeLayout>