<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile"
        android:onClick="goToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:text="@string/payments_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="365dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@color/light_gray"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/month"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:paddingLeft="7dp"
                android:text="@string/month"
                android:textFontWeight="900"
                android:textSize="25sp" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingLeft="65dp"
                android:text="@string/price"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:text="@string/pay_now" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>