<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/home_button_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="goToDuePayments"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/invoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeButton"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/maps_button_container"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/home_button_container"
        android:onClick="goToMaps"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapsButton"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_button_container"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/maps_button_container"
        android:layout_marginTop="50dp"
        android:onClick="goToProfile"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileButton"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/history_button_container"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_button_container"
        android:layout_marginTop="50dp"
        android:onClick="goToHistory"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyButton"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/payment_code_button_container"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_button_container"
        android:layout_marginTop="50dp"
        android:onClick="goToPassCodeGeneration"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/code_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_code"
                android:textColor="@color/purple_700"
                android:textFontWeight="800"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/motto"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>