<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/health"
        android:contentDescription="@string/app_image"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="170dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="40"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:paddingHorizontal="24dp"
        android:text="@string/intro"
        android:autofillHints="Intro"
        android:textSize="24sp"
        tools:ignore="LabelFor"  />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="30dp"
        android:onClick="goToSignIn">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:gravity="center">
            <TextView
                android:id="@+id/textViewHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/purple_700"
                android:textSize="21sp"
                android:textFontWeight="800"
                />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>